--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alex Johnson - Aspiring Full Stack Developer</title>
-    <meta name="description" content="Recent Computer Science graduate passionate about web development. Specializing in React, JavaScript, and modern web technologies. Ready for entry-level opportunities." />
-    <meta name="author" content="Alex Johnson" />
+    <title>Sharansidh Software-Developer</title>
+    <meta name="description" content="Pursuing Electronics and Communication Engineering passionate about Software-Developement. Specializing in React, JavaScript, and modern web technologies. Ready for entry-level opportunities." />
+    <meta name="author" content="Sharansidh" />
 
-    <meta property="og:title" content="Alex Johnson - Aspiring Full Stack Developer" />
+    <meta property="og:title" content="Sharansidh - Aspiring Software Developer" />
     <meta property="og:description" content="Recent Computer Science graduate passionate about web development and ready to start my tech career." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
